fix buttons on mobile

--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -207,14 +207,6 @@ textarea {
 .filters-responsive-btn a {
   margin-top: 20px; }
 
-.filters-responsive-btn h2 {
-  text-align: center; }
-
-
-.filters-responsive-btn h2 {
-  text-align: center; }
-
-
 .full-label label {
   width: 100%; }
 
@@ -231,7 +223,7 @@ textarea {
 .noUi-target,
 .noUi-target * {
   -webkit-touch-callout: none;
-  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-user-select: none;
   -ms-touch-action: none;
   touch-action: none;
@@ -610,7 +602,6 @@ nav {
   src: url("../fonts/materialdesignicons-webfont.eot?#iefix&v=2.0.46") format("embedded-opentype"), url("../fonts/materialdesignicons-webfont.woff2?v=2.0.46") format("woff2"), url("../fonts/materialdesignicons-webfont.woff?v=2.0.46") format("woff"), url("../fonts/materialdesignicons-webfont.ttf?v=2.0.46") format("truetype"), url("../fonts/materialdesignicons-webfont.svg?v=2.0.46#materialdesigniconsregular") format("svg");
   font-weight: normal;
   font-style: normal; }
-
 .mdi:before,
 .mdi-set {
   display: inline-block;
@@ -6971,7 +6962,6 @@ nav {
   100% {
     -webkit-transform: rotate(359deg);
     transform: rotate(359deg); } }
-
 @keyframes mdi-spin {
   0% {
     -webkit-transform: rotate(0deg);
@@ -6979,9 +6969,8 @@ nav {
   100% {
     -webkit-transform: rotate(359deg);
     transform: rotate(359deg); } }
-
 #share a {
-  position: absolute;
+  position: fixed;
   top: 50vh;
   right: 0;
   background-color: red;
@@ -6989,44 +6978,49 @@ nav {
   border-radius: 50%;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out; }
-
 #share a.hidden {
   visibility: hidden; }
-
 #share a:last-child {
   padding: 8px 15px; }
-
 #share a:nth-child(1) {
   background-color: #73b4ff;
   padding: 8px 15px; }
-
 #share a:nth-child(1).show {
   -webkit-transform: rotate(60deg) translate(-110px) rotate(-60deg);
   transform: rotate(60deg) translate(-110px) rotate(-60deg); }
-
 #share a:nth-child(2) {
   background-color: #3B5998;
   padding: 8px 15px; }
-
 #share a:nth-child(2).show {
   -webkit-transform: rotate(20deg) translate(-110px) rotate(-20deg);
   transform: rotate(20deg) translate(-110px) rotate(-20deg); }
-
 #share a:nth-child(3) {
   background-color: #007bb6;
   padding: 8px 15px; }
-
 #share a:nth-child(3).show {
   -webkit-transform: rotate(-20deg) translate(-110px) rotate(20deg);
   transform: rotate(-20deg) translate(-110px) rotate(20deg); }
-
 #share a:nth-child(4) {
   background-color: gray;
   padding: 8px 15px; }
-
 #share a:nth-child(4).show {
   -webkit-transform: rotate(-60deg) translate(-110px) rotate(60deg);
   transform: rotate(-60deg) translate(-110px) rotate(60deg); }
+#share .mobile a {
+  top: 90vh;
+  right: 2vh; }
+#share .mobile a:nth-child(1).show {
+  -webkit-transform: rotate(90deg) translate(-100px) rotate(-100deg);
+  transform: rotate(90deg) translate(-100px) rotate(-100deg); }
+#share .mobile a:nth-child(2).show {
+  -webkit-transform: rotate(60deg) translate(-100px) rotate(-60deg);
+  transform: rotate(60deg) translate(-100px) rotate(-60deg); }
+#share .mobile a:nth-child(3).show {
+  -webkit-transform: rotate(30deg) translate(-100px) rotate(-30deg);
+  transform: rotate(30deg) translate(-100px) rotate(-30deg); }
+#share .mobile a:nth-child(4).show {
+  -webkit-transform: rotate(0deg) translate(-100px) rotate(0deg);
+  transform: rotate(0deg) translate(-100px) rotate(0deg); }
 
 #home {
   min-height: 100vh; }
@@ -7045,7 +7039,6 @@ nav {
     font-size: x-large;
     margin-top: 5%;
     margin-bottom: 8%; } }
-
 #results {
   min-height: 100vh; }
   #results h1 {
@@ -7119,6 +7112,8 @@ nav {
     margin-left: 6%; }
   #tags .last {
     margin-bottom: 10%; }
+  #tags .logicielTagView {
+    margin-top: 20px; }
 
 #listing {
   min-height: 100vh; }
@@ -7132,7 +7127,6 @@ nav {
     font-size: x-large;
     margin-top: 5%;
     margin-bottom: 8%; } }
-
 @media (min-width: 400px) and (max-width: 1024px) {
   #results h1 {
     text-align: center;
@@ -7141,7 +7135,6 @@ nav {
     font-size: x-large;
     margin-top: 5%;
     margin-bottom: 5%; } }
-
 #table {
   min-height: 100vh; }
 
@@ -7155,3 +7148,5 @@ body {
   background-repeat: no-repeat; }
   body h1 {
     font-size: xx-large; }
+
+/*# sourceMappingURL=main.css.map */
